shit. cthulhu boss coming